# master

./: README.md  pyproject.toml  rag_runner_ui.py  readme.md  requirements.txt
backend/app/: main.py
backend/app/core/: config.py
backend/app/models/: evidence.py
backend/app/routers/: report.py
backend/app/services/: deep_research.py  rag.py  reporting.py  utils.py
backend/tests/: test_smoke.py
frontend/: streamlit_app.py
knowledge_base/: GPU_RFP_All_46.txt
legacy/: rag_runner_ui.py
